changes made to try rectify ongoing flip issue on ios

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -114,7 +114,7 @@ i {
 }
 
 .box {
-     background: white;
+     background: transparent;
      box-shadow: 0 0 10px;
      margin: 5px;
      color: white;
